Implement the home page
This makes the interaction between different contest entry pages way easier. Meanwhile, implement also a "<< Go Back" button link which redirects back to the home page.

--- a/fifth.html
+++ b/fifth.html
@@ -6,16 +6,17 @@
    "http://www.w3.org/TR/html4/loose.dtd">
 <html lang = "en">
    <head>
-      <meta http-equiv = "Content-Type" content = "text/html; charset=UTF-8">
+      <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8">
       <title>&nbsp;ReactOS Community - 5th Testing Contest</title>
       <link href = "StyleSheet.css" rel = "StyleSheet" type = "text/css">
    </head>
   
    <body>
-      <img src = "images/ROS.png" alt = "ReactOS Icon" align = "left" height = "100" width = "100" hspace = "10">
+      <img src = "images/ROS.png" alt = "ReactOS Icon" align = "left" height = "120" width = "120" hspace = "10">
       <h1>&nbsp;ReactOS Community</h1>
       <h2>&nbsp;5th Testing Contest</h2>
       <h4><i>&nbsp;7 tests in total made by 4 candidates</i></h4>
+      <h4>&nbsp;<a href = "index.html"><< Go Back</a></h4>
 
       <!-- Add a separator -->
       <hr style = "border-width: 3px">
