Remove unnecessary space on <title> tags
&nbsp; entity is useless as the argument title wrapped within <title> tag is rendered by the browser.

--- a/fifth.html
+++ b/fifth.html
@@ -7,7 +7,7 @@
 <html lang = "en">
    <head>
       <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8">
-      <title>&nbsp;ReactOS Community - 5th Testing Contest</title>
+      <title>ReactOS Community - 5th Testing Contest</title>
       <link href = "StyleSheet.css" rel = "StyleSheet" type = "text/css">
    </head>
   
