--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html lang = "en">
    <head>
       <meta http-equiv = "Content-Type" content = "text/html; charset = UTF-8">
-      <title>&nbsp;Home Page</title>
+      <title>Home Page</title>
       <link href = "StyleSheet.css" rel = "StyleSheet" type = "text/css">
    </head>
 
