Fix autoplay on videos
Replace <object> with <a> which will redirect to the video content. In HTML 4.01, we do not have an "autoplay" attribute for the <object> tag thus this is the only solution to fix it.

--- a/fifth.html
+++ b/fifth.html
@@ -62,7 +62,7 @@
          <br>
          <img src = "images/fifth/fifth-digitalworks2.png" alt = "Digital Works" height = "470" width = "510" hspace = "25">
          <br>
-         <object data = "videos/fifth/fifth-digitalworks.mp4" height = "470" width = "510" hspace = "25"></object>
+         <a href = "videos/fifth/fifth-digitalworks.mp4"><img src = "images/fifth/fifth-digitalworks-video.png" alt = "Digital Works Video" height = "470" width = "550" hspace = "25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -118,7 +118,7 @@
          <p>
             WOW 1.12.1 working on Reactos 0.4.10
          </p>
-         <object data = "videos/fifth/fifth-wow.mp4" height = "470" width = "510" hspace = "25"></object>
+         <a href = "videos/fifth/fifth-wow.mp4"><img src = "images/fifth/fifth-wow-video.png" alt = "World of Warcraft Video" height = "470" width = "550" hspace = "25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -150,7 +150,7 @@
          <p>
             This time I used vbox drivers instead of swiftshader. The result is much better. The mouse behaves weirdly tho.
          </p>
-         <object data = "videos/fifth/fifth-wow2.mp4" height = "470" width = "510" hspace = "25"></object>
+         <a href = "videos/fifth/fifth-wow2.mp4"><img src = "images/fifth/fifth-wow-video2.png" alt = "World of Warcraft Video" height = "470" width = "550" hspace = "25"></a>
       </div>
 
       <!-- Add a separator -->
