--- a/fifth.html
+++ b/fifth.html
@@ -31,9 +31,9 @@
          <h3>&nbsp;&nbsp;<b>Post Date: 08/11/2018</b></h3>
 
          <br>
-         <img src = "images/fifth/fifth-AwardWinflash.jpg" alt = "Award WinFlash" height = "450" width = "450" hspace = "25">
+         <img src = "images/fifth/AwardWinflash.jpg" alt = "Award WinFlash" height = "450" width = "450" hspace = "25">
          <br>
-         <img src = "images/fifth/fifth-mobo.jpg" alt = "Motherboard" height = "450" width = "450" hspace = "25">
+         <img src = "images/fifth/mobo.jpg" alt = "Motherboard" height = "450" width = "450" hspace = "25">
          <br>
          <iframe src = "https://www.youtube.com/embed/F3E_GWrCZXQ" width = "450" height = "315"></iframe>
          <br>
@@ -58,11 +58,11 @@
          <p>
             Digital Works 3.0.5.0 under ReactOS 0.4.10, tested some circuits.
          </p>
-         <img src = "images/fifth/fifth-digitalworks.png" alt = "Digital Works" height = "470" width = "510" hspace = "25">
+         <img src = "images/fifth/digitalworks.png" alt = "Digital Works" height = "470" width = "510" hspace = "25">
          <br>
-         <img src = "images/fifth/fifth-digitalworks2.png" alt = "Digital Works" height = "470" width = "510" hspace = "25">
+         <img src = "images/fifth/digitalworks2.png" alt = "Digital Works" height = "470" width = "510" hspace = "25">
          <br>
-         <a href = "videos/fifth/fifth-digitalworks.mp4"><img src = "images/fifth/fifth-digitalworks-video.png" alt = "Digital Works Video" height = "470" width = "550" hspace = "25"></a>
+         <a href = "videos/fifth/digitalworks.mp4"><img src = "images/fifth/digitalworks-video.png" alt = "Digital Works Video" height = "470" width = "550" hspace = "25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -91,18 +91,18 @@
          <h3>&nbsp;&nbsp;<b>Post Date: 13/11/2018</b></h3>
 
          <br>
-         <img src = "images/fifth/fifth-tomGDI.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
+         <img src = "images/fifth/tomGDI.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
          <br>
-         <img src = "images/fifth/fifth-tomGDI2.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
+         <img src = "images/fifth/tomGDI2.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
          <br>
-         <img src = "images/fifth/fifth-tomGDI4.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
+         <img src = "images/fifth/tomGDI4.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
          <br>
-         <img src = "images/fifth/fifth-tomGDI5.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
+         <img src = "images/fifth/tomGDI5.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
          <br>
          <p>
             Tom2D GDI benchmark works in ReactOS 0.4.10, needs VB6 to run
          </p>
-         <img src = "images/fifth/fifth-tomGDI6.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
+         <img src = "images/fifth/tomGDI6.png" alt = "Tom2D GDI Benchmark" height = "470" width = "560" hspace = "25">
       </div>
 
       <!-- Add a separator -->
@@ -118,7 +118,7 @@
          <p>
             WOW 1.12.1 working on Reactos 0.4.10
          </p>
-         <a href = "videos/fifth/fifth-wow.mp4"><img src = "images/fifth/fifth-wow-video.png" alt = "World of Warcraft Video" height = "470" width = "550" hspace = "25"></a>
+         <a href = "videos/fifth/wow.mp4"><img src = "images/fifth/wow-video.png" alt = "World of Warcraft Video" height = "470" width = "550" hspace = "25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -150,7 +150,7 @@
          <p>
             This time I used vbox drivers instead of swiftshader. The result is much better. The mouse behaves weirdly tho.
          </p>
-         <a href = "videos/fifth/fifth-wow2.mp4"><img src = "images/fifth/fifth-wow-video2.png" alt = "World of Warcraft Video" height = "470" width = "550" hspace = "25"></a>
+         <a href = "videos/fifth/wow2.mp4"><img src = "images/fifth/wow-video2.png" alt = "World of Warcraft Video" height = "470" width = "550" hspace = "25"></a>
       </div>
 
       <!-- Add a separator -->
@@ -163,7 +163,7 @@
          <h3>&nbsp;&nbsp;<b>Post Date: 15/11/2018</b></h3>
 
          <br>
-         <img src = "images/fifth/fifth-QtSpim.png" alt = "QtSpim" height = "475" width = "700" hspace = "25">
+         <img src = "images/fifth/QtSpim.png" alt = "QtSpim" height = "475" width = "700" hspace = "25">
          <p>
             QtSpim 9.1.9 works in ReactOS, can load MIPS asm files and run them flawlessly
          </p>
