Bring the links back

--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
 
       <ul>
          <li>
+            <a href = "http://mcpg.pl/archive/rosdiscord/01092018/dark/ReactOSCommunity_3rd-contest-entries.html">3rd Testing Contest (NOTE: this page redirects to another host)</a>
+         </li>
+
+         <li>
+            <a href = "http://mcpg.pl/archive/rosdiscord/01092018/dark/ReactOSCommunity_4th-contest-entries.html">4th Testing Contest (NOTE: this page redirects to another host)</a>
+         </li>
+         
+         <li>
             <a href = "fifth.html">5th Testing Contest</a>
          </li>
       </ul>
