Post the 6th testing contest page

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
          <li>
             <a href = "fifth.html">5th Testing Contest</a>
          </li>
+
+         <li>
+            <a href = "sixth.html">6th Testing Contest</a>
+         </li>
       </ul>
    </body>
 </html>
