Post the results of 7th testing contest.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
          <li>
             <a href = "sixth.html">6th Testing Contest</a>
          </li>
+
+         <li>
+            <a href = "seventh.html">7th Testing Contest</a>
+         </li>
       </ul>
    </body>
 </html>
