Improve styling of testing contest entries
- Take advantage of entries being in divs by padding and adding a
background color for it.
- Bring out winner's entry with a golden background and point out
disqualified entries by a dark red background.
- Make font more pallatable for reading.
- Fixed a case-sensitivty issue on a image resource

--- a/fifth.html
+++ b/fifth.html
@@ -24,7 +24,7 @@
       <h1>&nbsp;<u>Submissions</u></h1>
 
       <!-- Users' posts -->
-      <div>
+      <div id="winner">
          <!-- Post details -->
          <h3>&nbsp;&nbsp;<b>Username: Carlos S. M. (Contest Winner)</b></h3>
          <h3>&nbsp;&nbsp;<b>User ID: 140189997558005761</b></h3>
