--- a/seventh.html
+++ b/seventh.html
@@ -24,6 +24,22 @@
       <h1>&nbsp;<u>Submissions</u></h1>
 
       <!-- Users' posts -->
+      <div id = "winner">
+         <!-- Post details -->
+         <h3>&nbsp;&nbsp;<b>Username: healLV (Contest Winner)</b></h3>
+         <h3>&nbsp;&nbsp;<b>User ID: 120622544989585408</b></h3>
+         <h3>&nbsp;&nbsp;<b>Post Date: 05/10/2019</b></h3>
+
+         <br>
+         <p>
+            Tux Paint on real machine with a drawing pad
+         </p>
+         <iframe src = "https://www.youtube.com/embed/wRMp0dg7ZlQ" width = "450" height = "315"></iframe>
+      </div>
+
+      <!-- Add a separator -->
+      <hr>
+
       <div>
          <!-- Post details -->
          <h3>&nbsp;&nbsp;<b>Username: thetechdog</b></h3>
@@ -60,7 +76,7 @@
       <!-- Add a separator -->
       <hr>
 
-      <div>
+      <div id = "disqualified">
          <!-- Post details -->
          <h3>&nbsp;&nbsp;<b>Username: polik</b></h3>
          <h3>&nbsp;&nbsp;<b>User ID: 407913558551166976</b></h3>
@@ -73,22 +89,6 @@
          <p>
             Couldn't get sound to work. Strange glitch, when the game is started in low graphics preset and when high preset is selected it becomes unplayable (very slow). When I start the game with high preset the gameplay is surprisingly smooth.
          </p>
-      </div>
-
-      <!-- Add a separator -->
-      <hr>
-
-      <div>
-         <!-- Post details -->
-         <h3>&nbsp;&nbsp;<b>Username: healLV (Contest Winner)</b></h3>
-         <h3>&nbsp;&nbsp;<b>User ID: 120622544989585408</b></h3>
-         <h3>&nbsp;&nbsp;<b>Post Date: 05/10/2019</b></h3>
-
-         <br>
-         <p>
-            Tux Paint on real machine with a drawing pad
-         </p>
-         <iframe src = "https://www.youtube.com/embed/wRMp0dg7ZlQ" width = "450" height = "315"></iframe>
       </div>
 
       <!-- Add a separator -->
