--- a/sixth.html
+++ b/sixth.html
@@ -24,7 +24,7 @@
       <h1>&nbsp;<u>Submissions</u></h1>
 
       <!-- Users' posts -->
-      <div>
+      <div id="winner">
          <!-- Post details -->
          <h3>&nbsp;&nbsp;<b>Username: jl91569 (Contest Winner)</b></h3>
          <h3>&nbsp;&nbsp;<b>User ID: 245108919020552192</b></h3>
