--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
          </li>
 
          <li>
-            <a href = "http://mcpg.pl/archive/rosdiscord/01092018/dark/ReactOSCommunity_4th-contest-entries.html">4th Testing Contest (NOTE: this page redirects to another host)</a>
+            <a href = "fourth.html">4th Testing Contest</a>
          </li>
          
          <li>
