Archive the third testing contest
Our mirror for third testing contest has gone down, so this is now
part of the repository.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <ul>
          <li>
-            <a href = "http://mcpg.pl/archive/rosdiscord/01092018/dark/ReactOSCommunity_3rd-contest-entries.html">3rd Testing Contest (NOTE: this page redirects to another host)</a>
+            <a href = "third.html">3rd Testing Contest</a>
          </li>
 
          <li>
