Format fixes for previous documents.

--- a/fourth.html
+++ b/fourth.html
@@ -30,9 +30,11 @@
          <h3>&nbsp;&nbsp;<b>User ID: 153597217956036608</b></h3>
          <h3>&nbsp;&nbsp;<b>Post Date: 31/07/2018</b></h3>
 
-         <p>Don't Starve (With both DLC)
          <br>
-         Runs literally flawlessly (Just takes a while to load)
+         <p>
+            Don't Starve (With both DLC)
+            <br>
+            Runs literally flawlessly (Just takes a while to load)
          </p>
          <a href = "https://i.imgur.com/vtbJMmL.jpg"><img src = "https://i.imgur.com/vtbJMmL.jpg" alt = "Base Game" height = "300" width = "550" hspace = "25"></a>
          <br>
@@ -44,7 +46,10 @@
          <hr>
          <h3>&nbsp;&nbsp;<b>Post Date: 02/08/2018</b></h3>
 
-         <p>Retroarch</p>
+         <br>
+         <p>
+            Retroarch
+         </p>
          <a href = "https://i.imgur.com/slrQx4I.png"><img src = "https://i.imgur.com/slrQx4I.png" alt = "Retroarch" height = "300" width = "550" hspace = "25"></a>
          <br>
          <a href = "images/fourth/retroarch-2.png"><img src = "images/fourth/retroarch-2.png" alt = "Retroarch" height = "300" width = "550" hspace = "25"></a>
@@ -55,9 +60,11 @@
          <hr>
          <h3>&nbsp;&nbsp;<b>Post Date: 03/08/2018</b></h3>
 
-         <p>Arduino IDE
          <br>
-         I programmed my Arduino Mega to blink its LED through ROS and it worked</p>
+         <p>
+            Arduino IDE
+            <br>
+            I programmed my Arduino Mega to blink its LED through ROS and it worked</p>
          <a href = "https://i.imgur.com/zTSXFkn.png"><img src = "https://i.imgur.com/zTSXFkn.png" alt = "Arduino IDE" height = "300" width = "550" hspace = "25"></a>
          <br>
          <iframe src = "https://youtube.com/embed/pDj5dUw11nc" width = "450" height = "315"></iframe>
@@ -106,6 +113,7 @@
          <h3>&nbsp;&nbsp;<b>User ID: 224950895572549632</b></h3>
          <h3>&nbsp;&nbsp;<b>Post Date: 24/07/2018</b></h3>
 
+         <br>
          <p>
             Cheat Engine 6.8.1 works in ReactOS 0.4.9 (previously tested 6.7) All major functions (still) work So if a game runs on ReactOS, you sure can cheat ;)
          </p>
@@ -123,7 +131,8 @@
 
          <p>
             OllyDbg2 works in ReactOS 0.4.9 and its "test application"
-            <br>So you can make your ros games drm free.
+            <br>
+            So you can make your ros games drm free.
          </p>
          <a href = "images/fourth/roscontest-ollydbg2.png"><img src = "images/fourth/roscontest-ollydbg2.png" alt = "OllyDbg2" height = "470" width = "560" hspace = "25"></a>
       </div>
