--- a/third.html
+++ b/third.html
@@ -31,9 +31,10 @@
          <h3>&nbsp;&nbsp;<b>Post Date: 26/04/2018</b></h3>
 
          <br>
-         <p>The Elder Scrolls IV: Oblivion
-         <br>
-         And sound also is working.
+         <p>
+            The Elder Scrolls IV: Oblivion
+            <br>
+            And sound also is working.
          </p>
          <iframe src = "https://youtube.com/embed/9NXkoOrplRk" width = "450" height = "315"></iframe>
 
@@ -42,9 +43,11 @@
          <h3>&nbsp;&nbsp;<b>Post Date: 28/04/2018</b></h3>
 
          <br>
-         <p>OpenMW 0.42.0
-         <br>
-         Sound is not working.</p>
+         <p>
+            OpenMW 0.42.0
+            <br>
+            Sound is not working.
+         </p>
          <a href = "images/third/openmw.png"><img src = "images/third/openmw.png" alt = "OpenMW" height = "300" width = "450" hspace = "25"></a>
 
          <!-- Add a separator -->
@@ -122,7 +125,8 @@
          <br>
          <p>
             Ollydbg 2 runs fine on reactos. tested basic functionality like setting breakpoint, assembling code, stepping through code etc
-            <br>has a bit weirdlish fonts in some sections, but it is readable
+            <br>
+            has a bit weirdlish fonts in some sections, but it is readable
          </p>
          <a href = "images/third/ollydbg2.png"><img src = "images/third/ollydbg2.png" alt = "OllyDbg2" height = "400" width = "500" hspace = "25"></a>
       </div>
