--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
          Our unofficial ReactOS Community discord server organises testing contests every time a new ReactOS release is published to the public. A testing contest is a competition which a candidate submits an entry with a tested application (with the following application's name, some screenshots and/or a video). At the end of the competition the community picks the winner by polling. The winner is chosen accordingly by the highest number of votes.
       </p>
 
+      <p>
+         To view the leaderboard of contest participants, please check the <a href="leaderboard.html">Leaderboard</a> page.
+      </p>
+
       <h1>&nbsp;<u>Contest Pages</u></h1>
 
       <p>
