Put spaces between the equal sign and the tag data

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Filename: index.html -->
+﻿<!-- Filename: index.html -->
 <!-- Purpose: Testing Contest home page -->
 <!-- Created by George Bișoc (Fraizeraust) -->
 
@@ -27,7 +27,7 @@
       </p>
 
       <p>
-         To view the leaderboard of contest participants, please check the <a href="leaderboard.html">Leaderboard</a> page.
+         To view the leaderboard of contest participants, please check the <a href = "leaderboard.html">Leaderboard</a> page.
       </p>
 
       <h1>&nbsp;<u>Contest Pages</u></h1>
