--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!-- Filename: index.html -->
+<!-- Filename: index.html -->
 <!-- Purpose: Testing Contest home page -->
 <!-- Created by George Bișoc (Fraizeraust) -->
 
