Publish the 8th contest page and leaderboard results

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
          <li>
             <a href = "seventh.html">7th Testing Contest</a>
          </li>
+
+         <li>
+            <a href = "eighth.html">8th Testing Contest</a>
+         </li>
       </ul>
    </body>
 </html>
