--- a/leaderboard.html
+++ b/leaderboard.html
@@ -33,6 +33,35 @@
             <th>Number of tests</th>
             <th>Number of contests participated</th>
          </tr>
+
+         <!-- User board details -->
+         <tr>
+            <td>ecksdii (361477422203273216)</td>
+            <td>1</td>
+            <td>1</td>
+            <td>1</td>
+         </tr>
+
+         <tr>
+            <td>BieHDC (224950895572549632)</td>
+            <td>N/A</td>
+            <td>1</td>
+            <td>1</td>
+         </tr>
+
+         <tr>
+            <td>bre.haviours (422004929956413451)</td>
+            <td>N/A</td>
+            <td>1</td>
+            <td>1</td>
+         </tr>
+
+         <tr>
+            <td>winterhell (180798519785947136)</td>
+            <td>N/A</td>
+            <td>4</td>
+            <td>1</td>
+         </tr>
       </table>
    </body>
 </html>
