Replace my previous alias

--- a/seventh.html
+++ b/seventh.html
@@ -126,7 +126,7 @@
          </li>
       </ul>
 
-      <h4><i>The 7th testing contest has been hosted & organized by <strong>Fraizeraust</strong></i></h4>
-      <h4><i>ReactOS Testing Contest manager - <strong>Fraizeraust</strong></i></h4>
+      <h4><i>The 7th testing contest has been hosted & organized by <strong>GeoB99</strong></i></h4>
+      <h4><i>ReactOS Testing Contest manager - <strong>GeoB99</strong></i></h4>
    </body>
 </html>
