--- a/third.html
+++ b/third.html
@@ -254,7 +254,7 @@
             <strong>BieHDC -- </strong> Got <strong>4</strong> votes from: dotcomboom, Mcpg, Kleadron, steyrmodder.
          </li>
          <li>
-            <strong>Illen -- </strong> Got <strong>11</strong> votes from: Fraizeraust, Technochips, Cernodile, hacker420, thetechdog, eiglow_, matteqa., cooc, Tux, Bullet Barrage Spy, nom-ent.
+            <strong>Illen -- </strong> Got <strong>11</strong> votes from: GeoB99, Technochips, Cernodile, hacker420, thetechdog, eiglow_, matteqa., cooc, Tux, Bullet Barrage Spy, nom-ent.
          </li>
          <li>
             <strong>Zekken -- </strong> Got <strong>1</strong> vote from: healLV.
