--- a/sixth.html
+++ b/sixth.html
@@ -1,6 +1,6 @@
 <!-- Filename: sixth.html -->
 <!-- Purpose: Webpage showcasting the 6th ReactOS Testing Contest (for archiving purposes) -->
-<!-- Created by George Bișoc (Fraizeraust) -->
+<!-- Created by George Bișoc (GeoB99) -->
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
    "http://www.w3.org/TR/html4/loose.dtd">
@@ -150,7 +150,7 @@
          </li>
       </ul>
 
-      <h4><i>The 6th testing contest has been hosted & organized by <strong>Fraizeraust</strong></i></h4>
-      <h4><i>ReactOS Testing Contest manager - <strong>Fraizeraust</strong></i></h4>
+      <h4><i>The 6th testing contest has been hosted & organized by <strong>GeoB99</strong></i></h4>
+      <h4><i>ReactOS Testing Contest manager - <strong>GeoB99</strong></i></h4>
    </body>
 </html>
